# src/docs/swagger.json
@@ -1319,6 +1319,29 @@
                 }
             }
         },
+        "/subscriptions/notification": {
+            "post": {
+                "description": "Handle payment notification from Midtrans",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Subscription"
+                ],
+                "summary": "Midtrans payment notification webhook",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Common"
+                        }
+                    }
+                }
+            }
+        },
         "/subscriptions/plans": {
             "get": {
                 "description": "Get available subscription plans",
@@ -1366,12 +1389,11 @@
                         "required": true
                     },
                     {
-                        "description": "Payment data",
+                        "description": "Payment data (optional)",
                         "name": "request",
                         "in": "body",
-                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/example.PurchaseSubscriptionRequest"
+                            "$ref": "#/definitions/model.PurchaseSubscriptionRequest"
                         }
                     }
                 ],
@@ -1379,7 +1401,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/example.UserSubscriptionResponse"
+                            "$ref": "#/definitions/response.PaymentResponse"
                         }
                     }
                 }
@@ -3069,15 +3091,6 @@
                 }
             }
         },
-        "example.PurchaseSubscriptionRequest": {
-            "type": "object",
-            "properties": {
-                "payment_method": {
-                    "type": "string",
-                    "example": "gopay"
-                }
-            }
-        },
         "example.RefreshToken": {
             "type": "object",
             "properties": {
@@ -3703,6 +3716,34 @@
                 "Female"
             ]
         },
+        "model.PaymentResponse": {
+            "type": "object",
+            "properties": {
+                "order_id": {
+                    "type": "string"
+                },
+                "redirect_url": {
+                    "type": "string"
+                },
+                "transaction_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.PurchaseSubscriptionRequest": {
+            "type": "object",
+            "properties": {
+                "payment_method": {
+                    "type": "string",
+                    "enum": [
+                        "gopay",
+                        "shopeepay",
+                        "bank_transfer",
+                        "credit_card"
+                    ]
+                }
+            }
+        },
         "model.Recipe": {
             "type": "object",
             "properties": {
@@ -3794,6 +3835,9 @@
                 "payment_method": {
                     "type": "string"
                 },
+                "payment_status": {
+                    "type": "string"
+                },
                 "plan": {
                     "$ref": "#/definitions/model.SubscriptionPlanResponse"
                 },
@@ -3837,6 +3881,20 @@
                     "type": "boolean"
                 },
                 "feature": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.PaymentResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/model.PaymentResponse"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
